# CarDashbordDisp

DashBord/: CMakeLists.txt  DataDisplay.qml  StatusBar.qml  main.cpp  main.qml  qml.qrc
DashBord/VheicleDataSender/: VheicleDataSender.cpp  VheicleDataSender.h
